apps/syncright/1-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncright
