apps/syncright/3-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: syncright
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: syncright
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: redis
          image: redis:7-alpine
          args: ["--requirepass", "$(REDIS_PASSWORD)", "--save", "", "--appendonly", "no"]
          ports:
            - containerPort: 6379
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 200m, memory: 128Mi }
          readinessProbe:
            tcpSocket:
              port: 6379
