apps/syncright/4-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: syncright
spec:
  selector:
    app: backend
  ports:
    - port: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: syncright
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: backend
          image: pratikpokhrel2/syncright-k8s-server:1.0.0
          ports:
            - containerPort: 8000
          resources:
            requests: { cpu: 100m, memory: 192Mi }
            limits: { cpu: 500m, memory: 384Mi }
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
