apps/syncright/5-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: syncright
spec:
  selector:
    app: frontend
  ports:
    - port: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: syncright
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: frontend
          image: pratikpokhrel2/syncright-k8s-client:1.0.1
          ports:
            - containerPort: 80
          resources:
            requests: { cpu: 25m, memory: 32Mi }
            limits: { cpu: 200m, memory: 64Mi }
          readinessProbe:
            httpGet:
              path: /
              port: 80
